@@ -40,6 +40,8 @@ class PetAI : public CreatureAI
         void KilledUnit(Unit* /*victim*/);
         void AttackStart(Unit* target);
         void MovementInform(uint32 moveType, uint32 data);
+        void OwnerDamagedBy(Unit* attacker);
+        void OwnerAttacked(Unit* target);
 
     private:
         bool _isVisible(Unit*) const;
